--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,12 +1,14 @@
 @charset "utf-8";
 
+// Define defaults for each variable.
+
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
-$small-font-size:  $base-font-size * 0.850 !default;
+$small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit:     40px !default;
 
 $text-color:       #3B3738 !default;
 $background-color: #FDF3E7 !default;
@@ -24,7 +26,13 @@ $content-width:    800px !default;
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
-
+// Use media queries like this:
+// @include media-query($on-palm) {
+//   .wrapper {
+//     padding-right: $spacing-unit / 2;
+//     padding-left: $spacing-unit / 2;
+//   }
+// }
 @mixin media-query($device) {
   @media screen and (max-width: $device) {
     @content;
