--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -108,7 +108,7 @@ a {
     text-decoration: none;
 
     .username {
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
 }
