--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="Ekis Blog" />
+  <meta property="og:type" content="blog" />
+  <meta property="og:url" content="https://ex1-ekis2k.c9users.io/" />
+  <meta property="og:image" content="https://ibb.co/duFm3R" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   {% if jekyll.environment == 'production' and site.google_analytics %}
