--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 <article id="post-page">
 	<h2>{{ page.title }}</h2>		
@@ -11,3 +12,4 @@ layout: default
 	</div>
 </article>
 
+{% include disqus_comments.html %}
