--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,43 @@
-<footer><span>@2015 - Emerald</span></footer>
+<footer>
+	<div class="wrapper">
+	  <ul class="contact-list">
+		{% if site.location %}
+		<li>
+		  <a href="http://tiny.cc/vztroy">
+			<span class="icon">{% include icons/location.svg %}</span>
+			<span class="label">{{ site.location }}</span>
+		  </a>
+		</li>
+		{% endif %} {% if site.email %}
+		<li>
+			<span class="icon">{% include icons/email.svg %}</span>
+			<span class="label">{{ site.email }}</span>
+		</li>
+		{% endif %}
+	  </ul>
+	  <ul class="social-media-list">
+		{% if site.github_username %}
+		<li>
+		  <a href="https://github.com/{{ site.github_username }}">
+			<span class="icon">{% include icons/github.svg %}</span>
+			<span class="label">{{ site.github_username }}</span>
+		  </a>
+		</li>
+		{% endif %} {% if site.twitter_username %}
+		<li>
+		  <a href="https://twitter.com/{{ site.twitter_username }}">
+			<span class="icon">{% include icons/twitter.svg %}</span>
+			<span class="label">{{ site.twitter_username }}</span>
+		  </a>
+		</li>
+		{% endif %} {% if site.facebook_username %}
+		<li>
+		  <a href="https://facebook.com/Mokaii">
+			<span class="icon">{% include icons/facebook.svg %}</span>
+			<span class="label">{{ site.facebook_username }}</span>
+		  </a>
+		</li>
+		{% endif %}
+	  </ul>
+	</div>
+</footer>
