--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,10 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<meta name="generator" content="Jekyll">
-
+	<meta property="og:title" content="Examination 1" />
+	<meta property="og:type" content="ekis2k.examination" />
+	<meta property="og:url" content="http://www.github.com/Ekis2k" />
+	<meta property="og:image" content="https://jlospinoso.github.io/images/jekyll.svg" />
 	<title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	<!-- CSS & fonts -->
