--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="Examination 1" />
 	<meta property="og:type" content="ekis2k.examination" />
 	<meta property="og:url" content="http://www.github.com/Ekis2k" />
-	<meta property="og:image" content="https://jlospinoso.github.io/images/jekyll.svg" />
+	<meta property="og:image" content="https://jekyllrb.com/img/logo-2x.png" />
 	<title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	<!-- CSS & fonts -->
