--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
 	<a href="{{ site.baseurl }}">
-		<img src="{{ "/img/emerald.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="Emerald Logo">
+		<img src="{{ "/img/emerald.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="ekislogo">
 	  <h1>Examination 1</h1>
 	</a>
 </header>
